# http-component

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/api/: CMakeLists.txt  main.cpp
examples/webpage/: CMakeLists.txt  helpers.h  main.cpp
examples/webpage/public/: index.html
src/: CMakeLists.txt  client.cpp  client_socket.cpp  message.cpp  request.cpp  response.cpp  server.cpp  server_socket.cpp  socket_stream.cpp  stream.cpp  url.cpp
src/http/: client.h  client_socket.h  message.h  request.h  response.h  server.h  server_socket.h  socket_stream.h  stream.h  url.h
src/http/events/: common_events.h
src/http/exceptions/: bad_connection_exception.h  invalid_client_socket_exception.h  invalid_message_exception.h  invalid_url_exception.h  not_implemented_exception.h
src/http/interfaces/: client_interface.h  client_socket_interface.h  listenable_socket_interface.h  message_interface.h  readable_socket_interface.h  request_interface.h  response_interface.h  server_interface.h  server_socket_interface.h  socket_interface.h  socket_stream_interface.h  stream_interface.h  transport_interface.h  url_interface.h  writeable_socket_interface.h
src/http/pch/: network.h
src/http/platform/: check.h
src/http/types/: common.h  message.h  status_codes.h  verb.h
src/http/utils/: functions.h
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
tests/unit/: client_socket_test.cpp  client_test.cpp  message_test.cpp  request_test.cpp  response_test.cpp  server_test.cpp  socket_stream_test.cpp  stream_test.cpp  url_test.cpp
(+1 files in other folders)
